--- a/app/Resources/views/default/ip-calc.html.twig
+++ b/app/Resources/views/default/ip-calc.html.twig
@@ -13,19 +13,19 @@
                                 <label for="input-ip-address">IP-адрес</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="192" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="192" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="168" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center"  name="input-ip-address" placeholder="1" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center"  name="input-ip-address" placeholder="1" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
@@ -34,19 +34,19 @@
                                 <label for="input-mask-subnetwork">Маска подсети</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork"  placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork"  placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span class="hidden">.</span>
                             </div>
                             <div class="сol-lg-12 text-center"><span>или</span></div>
@@ -60,19 +60,19 @@
                                 <label for="output-ip-address">Номер сети</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="\d{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="0" maxlength="3" size="3" pattern="\d{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
